--- a/client/src/style.scss
+++ b/client/src/style.scss
@@ -57,6 +57,7 @@ $lightGreen : #b9e7e7;
         }
       }
      }
+    // \LOGIN & REGISTER
 
 
     // Navbar
@@ -102,6 +103,7 @@ $lightGreen : #b9e7e7;
          }
        }
      }
+    // \Navbar
 
     // FOOTER
     footer{
@@ -117,6 +119,7 @@ $lightGreen : #b9e7e7;
 
       }
     }
+    // \FOOTER
 
     // HOME
     .home{
@@ -185,7 +188,61 @@ $lightGreen : #b9e7e7;
         }
       }
     }
+    // \HOME
+
+    // SINGLE
+    .single{
+      display: flex;
+      gap: 50px;
+      .content{
+        flex: 5;
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        img{
+          width: 100%;
+          height: 100px;
+          object-fit: cover;
+        }
+
+        .user{
+          display: flex;
+          align-items: center;
+          gap: 10px;
+          font-size: 14px;
+         img{
+           width: 50px;
+           height: 50px;
+           border-radius: 50%;
+           object-fit: cover;
+         }
+          span{
+            font-weight: bold;
+          }
+        }
+        .edit{
+          display: flex;
+          gap: 5px;
+
+          img{
+            height: 20px;
+            width: 20px;
+            cursor: pointer;
+          }
+        }
+        h1 {
+          font-size: 42px;
+          color: #333;
+        }
+        p{
+          text-align: justify;
+          line-height: 30px;
+        }
+      }
+      .menu{
+        flex:2
+      }
+    }
+    // \SINGLE
   }
-
-
 }
